<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/forget_password_logo" />

    <TextView
        android:id="@+id/fg_3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="Reset Password!"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fg_subtitle_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_3_title"
        android:gravity="center"
        android:text="Your have passed the security verification"
        android:textSize="20dp"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/fg_subtitle_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_subtitle_1"
        android:gravity="center"
        android:text="Set your new password!"
        android:textSize="20dp"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/fg_3_new_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginHorizontal="60dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/password_logo"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="New Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:textColor="#0084ff"
        android:textSize="15sp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/fg_3_confirm_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_3_new_password_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/password_logo"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#0084ff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fg_3_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_3_confirm_et"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/btn_bg"
        android:padding="1dp"
        android:text="UPDATE"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</RelativeLayout>