...
        android:gravity="center"
        android:text="Log in to your existent account"
        android:textSize="20dp"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/log_in_user_name_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginHorizontal="80dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
...
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#0084ff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/log_in_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/log_in_user_name_et"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/edit_text_bg"
...
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#0084ff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/log_in_password_et"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="80dp"
        android:background="@drawable/btn_bg"
...
            android:textSize="20dp"
            android:text="@string/sign_up"
            android:textColor="#0038d1" />
    </RelativeLayout>

    <TextView
        android:id="@+id/log_in_reset_key_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"

...
