<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/forget_password_logo" />

    <TextView
        android:id="@+id/fg_2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="Forget Password?"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/fg_2_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fg_2_title"
        android:gravity="center"
        android:text="Answer your security questions to change password" />

    <TextView
        android:id="@+id/fg_2_q"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_2_subtitle"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/edit_text_bg"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:text=""
        android:textColor="?android:textColorHint"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/security_question" />

    <EditText
        android:id="@+id/fg_2_a"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_2_q"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/security_answer"
        android:drawablePadding="5dp"
        android:ellipsize="none"
        android:hint="Answer"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textColor="?android:textColorHint" />

    <!--    <TextView-->
    <!--        android:id="@+id/fg_2_q2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_below="@id/fg_2_a1"-->
    <!--        android:layout_marginTop="25dp"-->
    <!--        android:layout_marginHorizontal="60dp"-->
    <!--        android:background="@drawable/edit_text_bg"-->
    <!--        android:drawablePadding="5dp"-->
    <!--        android:ellipsize="none"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingEnd="20dp"-->
    <!--        android:singleLine="true"-->
    <!--        android:text=""-->
    <!--        android:textColor="?android:textColorHint"-->
    <!--        android:textSize="17sp"-->
    <!--        app:drawableStartCompat="@drawable/security_question" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/fg_2_a2"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_below="@id/fg_2_q2"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginHorizontal="60dp"-->
    <!--        android:background="@drawable/edit_text_bg"-->
    <!--        android:drawableStart="@drawable/security_answer"-->
    <!--        android:drawablePadding="5dp"-->
    <!--        android:ellipsize="none"-->
    <!--        android:hint="Answer"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingEnd="20dp"-->
    <!--        android:singleLine="true"-->
    <!--        android:textColor="?android:textColorHint" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/fg_2_q3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_below="@id/fg_2_a2"-->
    <!--        android:layout_marginTop="22dp"-->
    <!--        android:layout_marginHorizontal="60dp"-->
    <!--        android:background="@drawable/edit_text_bg"-->
    <!--        android:drawablePadding="5dp"-->
    <!--        android:ellipsize="none"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingEnd="20dp"-->
    <!--        android:singleLine="true"-->
    <!--        android:text=""-->
    <!--        android:textColor="?android:textColorHint"-->
    <!--        android:textSize="17sp"-->
    <!--        app:drawableStartCompat="@drawable/security_question" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/fg_2_a3"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_below="@id/fg_2_q3"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:layout_marginHorizontal="60dp"-->
    <!--        android:background="@drawable/edit_text_bg"-->
    <!--        android:drawableStart="@drawable/security_answer"-->
    <!--        android:drawablePadding="5dp"-->
    <!--        android:ellipsize="none"-->
    <!--        android:hint="Answer"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingEnd="20dp"-->
    <!--        android:singleLine="true"-->
    <!--        android:textColor="?android:textColorHint" />-->

    <Button
        android:id="@+id/fg_2_continue_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_2_a"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:text="CONTINUE"
        android:textColor="#ffffff" />

</RelativeLayout>