...
        android:gravity="center"
        android:text="Provide your user name to reset your password"
        android:textSize="20dp"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/fg_user_name_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="320dp"
        android:layout_marginRight="80dp"
        android:autofillHints=""
...
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="#0084ff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fg_1_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/fg_user_name_et"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
...
