<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/home_icon" />

    <item android:id="@+id/tools"
        android:title="Tools"
        android:icon="@drawable/tools_icon"/>

    <item android:id="@+id/me"
        android:title="Me"
        android:icon="@drawable/me_icon" />
</menu>
